test/valid/List/TestListEmpty.plume
/**
 * A class to test an empty list.
 *
 * @author Vasco T. Vasconcelos
 * @version $Id: TestListEmpty.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class TestListEmpty extends Object is

  method main : () -> String is
    new Empty().toString()
	// expected output: "[]"